@startuml MSA.Foundation Architecture Overview

!define RECTANGLE_SHAPE rectangle
!define COMPONENT_SHAPE component

skinparam BackgroundColor white
skinparam ComponentStyle uml2
skinparam DefaultTextAlignment center
skinparam TitleFontSize 20
skinparam ComponentFontSize 14
skinparam PackageFontSize 16
skinparam PackageBorderColor #777777
skinparam PackageFontColor #333333
skinparam ArrowColor #555555

title MSA.Foundation Architecture Overview

package "MSA.Foundation" as Foundation {
  ' Messaging components
  package "Messaging" as Messaging {
    component [MessageBroker] as MB #palegreen
    component [SocketCommunicationAdapter] as SCA #palegreen
    component [Message] as MSG #palegreen
    enum "MessageType" as MT #palegreen
    
    MB .down.> MSG : creates
    MB -down-> SCA : uses
    MSG .right.> MT : has
  }
  
  ' Telemetry components
  package "Telemetry" as Telemetry {
    interface "ITelemetryService" as ITS #lightyellow
    component [TelemetryService] as TS #lightyellow
    
    ITS <|.. TS : implements
  }
  
  ' Service Management components
  package "Service Management" as ServiceMgmt {
    component [ExecutionContext] as EC #lavender
    component [ServiceConstants] as SC #lavender
    
    EC .down.> SC : uses
  }
  
  ' Cross-component relationships
  MB ..> TS : sends telemetry
}

' External applications
package "Applications" as Apps {
  RECTANGLE_SHAPE "Application 1" as App1 #lightblue
  RECTANGLE_SHAPE "Application 2" as App2 #lightblue
  RECTANGLE_SHAPE "Application 3" as App3 #lightblue
}

' Application relationships
App1 -up-> MB : uses messaging
App1 -up-> TS : uses telemetry
App1 -up-> EC : manages services

App2 -up-> MB : uses messaging
App2 -up-> TS : uses telemetry
App2 -up-> EC : manages services

App3 -up-> MB : uses messaging
App3 -up-> TS : uses telemetry
App3 -up-> EC : manages services

' External systems
cloud "Azure Application Insights" as AAI
TS -up-> AAI : sends telemetry data

@enduml